--- a/src/assets/sass/abstracts/variables.scss
+++ b/src/assets/sass/abstracts/variables.scss
@@ -5,7 +5,7 @@
 $global-font-family: 'Poppins', serif;
 $global-font-size: 16px;
 $base-body-font-weight: 400;
-$global-line-height: 1.15;
+$global-line-height: 1.75;
 
 // ===========================
 //COLOR & BACKGROUND
@@ -17,6 +17,7 @@ $global-primary-background: #dc4229;
 // ===========================
 //LINK
 // ===========================
+// $global-link-hover-color: $global-primary-background;
 $base-link-hover-text-decoration: none;
 
 // ===========================
