--- a/src/assets/sass/pages/home.scss
+++ b/src/assets/sass/pages/home.scss
@@ -32,6 +32,15 @@
   }
 }
 #section-3 {
+  * + .uk-margin,
+  .uk-margin-top {
+    margin-top: 30px !important;
+  }
+  .uk-overlay-primary {
+    background-color: rgba(243, 197, 101, 0.8);
+  }
+}
+#section-7{
   .uk-overlay-primary {
     background-color: rgba(243, 197, 101, 0.8);
   }
@@ -39,6 +48,11 @@
 #section-14 {
   h3 {
     color: #fff;
+  }
+}
+#section-8{
+  .uk-slider-container{
+    padding:0px 10px;
   }
 }
 
